peronio, terminei de editar a primeira sessão.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p> Full access for less than $1 a day</p>
                 <button>Sign Up</button>
             </section>
-            <section class="direita"></section>
+            <section class="direita">
             <h2> Why Us</h2>
             <p>Tutorials by industry experts</p>
             <p>Peer & expert code review</p>
@@ -37,6 +37,7 @@
             <p>Community forum</p>
             <p>Flashcard decks</p>
             <p>New videos every week</p>
+            </section>
         </div>
         
     </main>
